Fixes missing modules